--- a/my-website/package.json
+++ b/my-website/package.json
@@ -2,13 +2,17 @@
   "name": "my-website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://www.kearnie.com",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -21,5 +25,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "surge": "^0.20.1"
+  }
 }
